Start services in docker containers (#67)
Part of https://github.com/creek-service/creek-system-test/issues/36

- each instance of service definition has unique name
- introduction of test containers causes issues with running from module path, hence switched functional tests to class path.